# sbnw

./: .gitignore  CMakeLists.txt  UserConfigWin.txt  readme.md
doxy/: doxy.cfg
etc/: landing-page.md
graphfab/: CMakeLists.txt  NotARealClass.cpp  NotARealClass.h  arrowhead.cpp  arrowhead.h  autolayoutSBML.cpp  autolayoutSBML.h  autolayoutc_api.h  box.cpp  box.h  canvas.cpp  canvas.h  curve.h  error.cpp  error.h  fr.cpp  fr.h  io.cpp  io.h  layout.cpp  layout.h  layoutall.h  network.cpp  network.h  point.cpp  point.h
graphfab/core/: BaseWORDs.h  DefaultBool.hpp  SagittariusAssert.h  SagittariusCommon.cpp  SagittariusCommon.h  SagittariusConfigure.h  SagittariusCore.h  SagittariusException.cpp  SagittariusException.hpp  SagittariusPlatform.h
graphfab/diag/: error.cpp
graphfab/draw/: magick.cpp  magick.h  tikz.cpp  tikz.h
graphfab/interface/: layout.cpp  layout.h
graphfab/layout/: arrowhead.cpp  arrowhead.h  box.cpp  box.h  canvas.cpp  fr.cpp
graphfab/math/: allen.h  cubic.cpp  cubic.h  dist.h  geom.cpp  geom.h  min_max.h  rand_unif.h  round.h  sig.h  sign_mag.h  transform.cpp  transform.h
graphfab/network/: network.cpp  network.h
graphfab/python/: sbnwmodule.c
graphfab/sbml/: autolayoutSBML.cpp  autolayoutSBML.h
graphfab/sphinx/: Makefile  make.bat
graphfab/sphinx/source/: conf.py  usage.txt
graphfab/util/: string.c
notes/: fedora.txt  spyder-exec.py
sandbox/affine2d/: affine2d-inv-test.cpp
sandbox/basic/: basic.c  cubic-test.cpp  issue_46.c  issue_48.c  pointer_safety_test.c
sandbox/spyderplugin/: p_pyfab.py
sandbox/tikz/: tikz-export.c
sbnw/: CMakeLists.txt  Network.cpp  Network.h  allen.h  arrowhead.cpp  arrowhead.h  autolayoutSBML.cpp  autolayoutSBML.h  box.cpp  box.h  canvas.cpp  canvas.h  constants.h  curve.h  dist.h  error.cpp  error.h  export.h  geom.cpp  geom.h  io.cpp  io.h  layout.cpp  layout.h  network.cpp  network.h  point.cpp  point.h  rand_unif.h  sign_mag.h  transform.cpp  transform.h
test/: CMakeLists.txt  NetworkTests.cpp  NotARealTest.cpp
test/models/: CMakeLists.txt  twocompsys_ex.cpp
testcases/: EquilibRaw_wlayout.xml
testcases/internal/: bounding_box.xml  twocompsys-ex-with-layout-written.xml
